Second commit of jquery files

--- a/q12.html
+++ b/q12.html
@@ -1,3 +1,15 @@
+<!--
+Display the tag's name on click. Go to the editor
+Sample Data :
+
+<body>
+<h1>Heading1</h1>
+<h2>Heading2</h2>
+<p>Paragraph</p>
+<button>Button</button>
+<div id="log"></div>
+</body>
+-->
 <!DOCTYPE html>
 <html lang="en">
 
