--- a/q20.html
+++ b/q20.html
@@ -1,3 +1,16 @@
+<!--
+Display the tag name of the click element. Go to the editor
+HTML Code:
+
+<body>
+<p></p>
+<h2>This is a heading 2</h2>
+<div>
+First name: <input type="text"><br>
+Last name: <input type="text">
+</div>
+</body>
+-->
 <!DOCTYPE html>
 <html lang="en">
 
