--- a/14.html
+++ b/14.html
@@ -1,11 +1,7 @@
-<!--
-Display the window width while (or after) it is resized. Go to the editor
-HTML Code:
-
-<body>
-<p>Press mouse and release here.</p>
-</body>
+<!--  
+Insert some HTML after all paragraphs.
 -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -18,13 +14,16 @@ HTML Code:
 </head>
 
 <body>
-    <p>Press mouse and release here.</p>
+    <p>First Paragraph</p>
+    <p>Second Paragraph</p>
+    <p>Third Paragraph</p>
+    <div></div>
 </body>
 
 <script>
     $(document).ready(() => {
-        $('body').on('click', () => {
-            $('p').html("Window width: " + $(window).width());
+        $('p').on('click', () => {
+            $('div').html("Extra content added");
         })
     });
 </script>
