--- a/q16.html
+++ b/q16.html
@@ -1,3 +1,12 @@
+<!--
+Attach a function to the focus event. The focus event occurs (display a message regarding the text field) when the <input> field gets focus. Go to the editor
+Sample Data :
+
+<body>
+<p><input type="text"> <span>Input your first name</span></p>
+<p><input type="text"> <span>Input your last name</span></p>
+</body>
+-->
 <!DOCTYPE html>
 <html lang="en">
 
