--- a/q8.html
+++ b/q8.html
@@ -1,3 +1,14 @@
+<!-- 
+Change the background color of the <div> element of the following code on clicking the button. Go to the editor
+Sample Data :
+
+<body>
+<div style="background-color:yellow">
+<p>Click the button to change the background color of this paragraph.</p>
+<button>Click me!</button>
+</div>
+</body>
+-->
 <!DOCTYPE html>
 <html lang="en">
 
